tests/baselines/reference/moduleClassArrayCodeGenTest.errors.txt
==== tests/cases/compiler/moduleClassArrayCodeGenTest.ts (1 errors) ====
    // Invalid code gen for Array of Module class
    
    module M
    {
        export class A { }
        class B{ }
    }
    
    var t: M.A[] = [];
    var t2: M.B[] = [];
              ~
!!! moduleClassArrayCodeGenTest.ts(10,11): error TS2094: The property 'B' does not exist on value of type 'M'.